--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola care chimbaa si sirve? care monda 
+        El nico me la chupaaaa en reversaa
     </p>
 </body>
 </html>
